# devhouse-archive

./: .babelrc  .dockerignore  .env  .eslintcache  .eslintignore  .eslintrc.js  .eslintrc.yaml  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .npmrc  .openapi-generator-ignore  .prettierrc.yaml  .snyk  .stylelintrc.js  .yarnrc  Cargo.toml  Dockerfile  README.md  SUGGESTIONS.md  auth.config.yml  babel.config.js  base.gitlab-ci.yml  cloudflared-config.yml  config-overrides.js  config.nginx  custom-elements.json  deploy.yaml  deploy.yml  docker-compose.yml  docusaurus.config.js  go.mod  go.sum  helm.gitlab-ci.yml  index.html  jest.config.js  kaniko.gitlab-ci.yml  main.go  main.tf  merge-all.sh  (+10 more)
.ci/: lerna-docker  verdaccio-config-uplink.yaml  verdaccio-config.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gitlab/: auto-deploy-value.yaml  auto-deploy-values.yaml
api/: openapi.yaml
cgi-bin/: oauth-credentials.sh
chart/: Chart.yaml  requirements.yaml  values.yaml
components/: Button.tsx  ButtonContainer.tsx  ErrorGate.tsx  Layout.module.scss  Layout.tsx  Warning.module.css
config/: modules.js  paths.js  webpack.config.js  webpackDevServer.config.js
database/: go.mod  user.go
developershouse-website/: project.md
docs/: ADD_QUESTION.md  intro.mdx
go/: helpers.go  impl.go  logger.go  model_takeout_services.go
lib/: admin.ts  login.ts  options.ts  s3.d.ts  session.d.ts  usePageState.tsx
logic/: api_service.go  get_takeouts.go  implementation.go  takeout_request.go
openapi/: go-gen.json  (+1 more)
openapi-gen/: package.json  tsconfig.json
(+1520 files in other folders)
